--- a/firstRipo.html
+++ b/firstRipo.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>myfirstrepo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>i am bangladeshi</h1>
     <p>rashedula alam</p>
     <h2>i can push</h2>
+    <h3>more paragraph</h3>
     
 </body>
 </html>
