--- a/firstRipo.html
+++ b/firstRipo.html
@@ -13,6 +13,8 @@
     <h2>i can push</h2>
     <h3>more paragraph</h3>
     <h1>it is changedred</h1>
+    <img src="user1.jpg" alt="">
+    <img src="user2.jpg" alt="">
     
 </body>
 </html>
