image successfully changes

--- a/firstRipo.html
+++ b/firstRipo.html
@@ -15,6 +15,7 @@
     <h1>it is changedred</h1>
     <img src="user1.jpg" alt="">
     <img src="user2.jpg" alt="">
+    <p>we can see pictures</p>
     
 </body>
 </html>
